--- a/package.json
+++ b/package.json
@@ -9,8 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.17",
+    "@mui/material": "^5.15.17",
+    "@mui/x-data-grid": "^7.4.0",
+    "@mui/x-date-pickers": "^7.5.0",
+    "@reduxjs/toolkit": "^2.2.4",
+    "axios": "^1.6.8",
+    "dayjs": "^1.11.11",
+    "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1"
   }
 }
